--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,6 @@ project(student_lz78)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES lz_command.c file_io.c file_io.h compressor.c compressor.h decompressor.c decompressor.h crc32.c)
-add_executable(lz_command ${SOURCE_FILES} lz_command.c file_io.c file_io.h compressor.c compressor.h decompressor.c decompressor.h crc32.c)
+set(SOURCE_FILES lz_command.c file_io.c file_io.h compressor.c compressor.h decompressor.c decompressor.h crc32.c hash_table.c hash_table.h)
+add_executable(lz_command ${SOURCE_FILES} lz_command.c file_io.c file_io.h compressor.c compressor.h decompressor.c decompressor.h crc32.c hash_table.c hash_table.h)
 
